[gd_scene load_steps=8 format=2]

[ext_resource path="res://manager/interface/InterfaceNextManager.gd" type="Script" id=1]
[ext_resource path="res://interface/norse/img/background-black.png" type="Texture" id=2]
[ext_resource path="res://interface/norse/font/Norsebold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://interface/norse/tile/TilesHUB.tres" type="TileSet" id=4]

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 1
outline_color = Color( 0.854902, 0.321569, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 3
outline_color = Color( 0.231373, 0.117647, 0.0156863, 1 )
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 30
outline_size = 1
outline_color = Color( 0.482353, 0.462745, 0.462745, 1 )
font_data = ExtResource( 3 )

[node name="NextInterface" type="Node2D"]
script = ExtResource( 1 )

[node name="BackRect" type="NinePatchRect" parent="."]
margin_left = 40.0
margin_right = 380.0
margin_bottom = 200.0
rect_min_size = Vector2( 340, 200 )
texture = ExtResource( 2 )

[node name="VContainer" type="VBoxContainer" parent="BackRect"]
margin_top = 2.0
margin_right = 340.0
margin_bottom = 202.0
rect_min_size = Vector2( 340, 50 )
custom_constants/separation = 5

[node name="CCRuneName" type="MarginContainer" parent="BackRect/VContainer"]
margin_right = 340.0
margin_bottom = 45.0
rect_min_size = Vector2( 340, 0 )

[node name="LRuneName" type="Label" parent="BackRect/VContainer/CCRuneName"]
margin_right = 340.0
margin_bottom = 45.0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.952941, 0.878431, 0.878431, 1 )
text = "KEY_VICTORY"
align = 1

[node name="CCEffectDescription" type="CenterContainer" parent="BackRect/VContainer"]
margin_top = 50.0
margin_right = 340.0
margin_bottom = 140.0
rect_min_size = Vector2( 340, 0 )

[node name="LEffectDescription" type="Label" parent="BackRect/VContainer/CCEffectDescription"]
margin_right = 340.0
margin_bottom = 90.0
rect_min_size = Vector2( 340, 90 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.839216, 0.839216, 0.839216, 1 )
custom_constants/line_spacing = 8
text = "KEY_MESSAGE"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="HCAlignment" type="HBoxContainer" parent="BackRect/VContainer"]
margin_top = 145.0
margin_right = 340.0
margin_bottom = 185.0
rect_min_size = Vector2( 340, 0 )
custom_constants/separation = 8
alignment = 1

[node name="CContainer" type="CenterContainer" parent="BackRect/VContainer/HCAlignment"]
margin_right = 340.0
margin_bottom = 40.0
rect_min_size = Vector2( 340, 0 )

[node name="Button" type="Button" parent="BackRect/VContainer/HCAlignment/CContainer"]
margin_left = 115.0
margin_right = 225.0
margin_bottom = 40.0
focus_mode = 0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_hover = Color( 0.498039, 0.419608, 0, 1 )
enabled_focus_mode = 0
text = "KEY_NEXT"
flat = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 84, 84 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 4, 1610612737, 0, 65536, 2, 0, 65540, 536870914, 0 )

[connection signal="pressed" from="BackRect/VContainer/HCAlignment/CContainer/Button" to="." method="_on_Button_pressed"]
